# MinecraftCheck

./: CMakeLists.txt  MinecraftCheck.pro  README.md  config.cpp  config.h  controls.cpp  controls.h  dbbrowser.cpp  dbbrowser.h  dialogdbtablesearch.cpp  dialogdbtablesearch.h  helper.cpp  helper.h  helpergraphics.cpp  helpergraphics.h  main.cpp  mainwindow.cpp  mainwindow.h  mojangapi.cpp  mojangapi.h  profiles.db  properties.h  resources.qrc  splashscreen.cpp  textlog.cpp  textlog.h
dialogs/: dialogbody.cpp  dialogvalueslist.cpp  dialogvalueslist.h
resources/: about_body.html  main.css  report_body.html  table_body.html  tip_body.html
resources/sql/: add_record_cape.sql  add_record_history.sql  add_record_profile.sql  clear_table.sql  create_table_capes.sql  create_table_history.sql  create_table_profiles.sql  del_record_cape.sql  del_record_history.sql  del_record_profile.sql  del_table.sql  get_profile_comment.sql  get_table_rows_count.sql  get_table_rows_count_where.sql  is_profile_exists_uuid.sql  is_profile_has_capes.sql  select_capes_uuid.sql  select_history_uuid.sql  select_history_where.sql  select_profile_uuid.sql  select_uuid_profiles.sql  select_uuid_profiles_where.sql  update_profile_comment.sql  vacuum.sql
